--- a/estilos.css
+++ b/estilos.css
@@ -56,6 +56,7 @@ header{
   align-items: center;
   transition: transform 0.5s ease, opacity 0.3s ease;
   opacity: 1;
+  z-index: 998;
 }
 nav ul{
   display: flex;
@@ -108,12 +109,13 @@ nav ul li a:hover{
   position: fixed;
   z-index: 999;
   bottom: 40px;
-  right:5vw;
+  right:20px;
   width: 70px;
   height: 70px;
   border-radius: 50%;
   background-color: var(--first-color);
   display: flex;
+  
 }
 
 #botonPalancaContainer .hamburger{
@@ -190,4 +192,31 @@ body section div{
   width: 250px;
   margin-bottom: 30px;
   margin-top: 10px;
+}
+/* ///////////////////////////////////////////////////////////////////////////Top Scroll jquery*/
+.to-top {
+  background: white;
+  position: fixed;
+  bottom: 16px;
+  right:90px;
+  width:70px;
+  height:70px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size:32px;
+  color:#1f1f1f;
+  text-decoration: none;
+  opacity:0;
+  pointer-events: none;
+  transition: all .4s;
+}
+
+.to-top.active {
+  bottom:40px;
+  pointer-events: auto;
+  opacity:1;
+  background-color: var(--first-color);
+  z-index: 999;
 }
