--- a/estilos.css
+++ b/estilos.css
@@ -196,7 +196,7 @@ body section div{
 }
 /* ///////////////////////////////////////////////////////////////////////////Top Scroll jquery*/
 .to-top {
-  background: white;
+  background: var(--first-color);
   position: fixed;
   bottom: 16px;
   right:80px;
@@ -207,7 +207,7 @@ body section div{
   align-items: center;
   justify-content: center;
   font-size:32px;
-  color:#1f1f1f;
+  color:var(--second-color-rgb);
   text-decoration: none;
   opacity:0;
   pointer-events: none;
