--- a/estilos.css
+++ b/estilos.css
@@ -273,3 +273,24 @@ body section div{
 #containerYM *{
   margin-top: 50px;
 }
+/* ///////////////////////////////////////////////////////////////////////////Section 5 Responsive Tester*/
+#Section_5 #upForm{
+  margin: 0 auto;
+  max-width: 400px;
+  min-width: 300px;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+}
+#Section_5 div div{
+  width: 100%;
+  display: inline-flex;
+  flex-direction: row;
+  height: 100%;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+#Section_5 #downForm{
+  margin-top: 20px;
+}
