--- a/estilos.css
+++ b/estilos.css
@@ -300,3 +300,25 @@ body section div{
   display: flex;
   flex-direction: column;
 }
+/* ///////////////////////////////////////////////////////////////////////////Status Conexion*/
+#sConexion {
+  position: fixed;
+  width: 100%;
+  height: 80px;
+  z-index: 999;
+  text-align: center;
+  transition: transform 1s ease-in-out;
+}
+#sConexion h3{
+  color: white;
+}
+.inConextion{
+  background-color: green;
+  top:0;
+  transform: translate(0,-100%);
+}
+.offConexion{
+  background-color: red;
+  top:0;
+  transform: translate(0,-100%);
+}
