--- a/estilos.css
+++ b/estilos.css
@@ -400,3 +400,61 @@ video{
   margin-bottom: 2%;
   margin-top: 2%;
 }
+/* ///////////////////////////////////////////////////////////////////////////////////Section 11 Slider */
+.sliderContainer{
+  max-height: 600px;
+  max-width: 800px;
+  width: 100%;
+  height: 70vh;
+  position: relative;
+  overflow: hidden;
+}
+#sliderContainerDiv{
+  position: absolute;
+}
+
+.btnSlider{
+  position: absolute;
+  border: none;
+  outline: none;
+  z-index: 2;
+  width: 40px;
+  height: 100%;
+  color: var(--first-color);
+  font-size: var(--t-texto);
+  background-color:rgba(var(--second-color),var(--alpha-color));
+  margin: 0;
+  transition: all 0.3s ease ;
+  opacity: 0.4;
+}
+.btnSlider:hover{
+  font-size:var(--t-texto-S);
+  width: 88px;
+  opacity: 0.9;
+}
+.btnSliderLeft{
+  left: 0;
+}
+.btnSliderRight{
+  right: 0;
+}
+.slider{
+  position: absolute;
+}
+.sliderView{
+  position: absolute;
+  z-index: 1;
+  right:0;
+  transition: all 0.5s ease;
+}
+.sliderLeft{
+  right:100%;
+  transition: all 0.5s ease;
+}
+.sliderRight{
+  right:-100%;
+  transition: all 0.5s ease;
+}
+.sliderNone{
+  display: none;
+}
