--- a/estilos.css
+++ b/estilos.css
@@ -87,11 +87,7 @@ header{
   /* overflow-y: auto; */
 }
 nav ul{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  justify-content: space-evenly;
+
   margin: 0;
   padding: 0;
   border: 0;
@@ -105,8 +101,8 @@ nav ul li{
   font-size: var(--t-texto);
   color: var(--first-color);
   border: 0;
-  width: 100%;
-  height: 100%;
+/*   width: 100%;
+  height: 100%; */
 }
 nav ul li a{
   display: inline-flex;
@@ -468,4 +464,27 @@ video{
 }
 .sliderNone{
   display: none;
+}
+/* ///////////////////////////////////////////////////////////////////////////////////Spyscroll */
+
+#menuPalanca .inRight{
+  position: fixed;
+  width: 300px;
+  bottom: 0;
+  height: 100vh;
+  background-color: rgba(var(--second-color),var(--alpha-color));
+  top: 0;
+  right: 0;
+  transition: transform 0.5s ease, opacity 0.3s ease;
+  opacity: 1;
+  z-index: 998;
+  /* overflow-y: auto; */
+}
+
+.inViewNav{
+  background-color: rgba(56,154,66,0.5);
+}
+.btnHidden{
+  visibility: hidden;
+  
 }
